# app/demo/static/v1/swagger.json
@@ -13,22 +13,6 @@
     "application/json"
   ],
   "definitions": {
-    "Adv_compr": {
-      "type": "object",
-      "properties": {
-        "factor": {
-          "type": "string"
-        },
-        "coefficients": {
-          "type": "number",
-          "format": "double"
-        },
-        "p": {
-          "type": "number",
-          "format": "double"
-        }
-      }
-    },
     "Chatfuel_text": {
       "type": "object",
       "properties": {
@@ -119,70 +103,6 @@
           },
           "400": {
             "description": "Invalid status value"
-          }
-        }
-      }
-    },
-    "/advertisements/chatfuel": {
-      "get": {
-        "operationId": "getComp_chatfuel",
-        "summary": "Get all Comparative Advertising between Samsung and Apple",
-        "tags": [
-          "Advertising Comparison"
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "$ref": "#/definitions/Chatfuel_text"
-            }
-          },
-          "400": {
-            "description": "Invalid status value"
-          }
-        }
-      }
-    },
-    "/advertisements": {
-      "get": {
-        "operationId": "get_comparison",
-        "summary": "Get all Comparative Advertising between Samsung and Apple",
-        "tags": [
-          "Advertising Comparison"
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/Adv_compr"
-              }
-            }
-          },
-          "400": {
-            "description": "Invalid status value"
-          }
-        }
-      }
-    },
-    "/nlp": {
-      "get": {
-        "operationId": "get_nlp",
-        "summary": "Get instance and entites from user query",
-        "tags": [
-          "NLP"
-        ],
-        "parameters": [
-          {
-            "name": "user_query",
-            "in": "query",
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
           }
         }
       }
